Quick fix to alignment of switch’s label

--- a/src/components/form/switch/_switch.scss
+++ b/src/components/form/switch/_switch.scss
@@ -7,6 +7,7 @@
     padding-left: $euiSizeS;
     line-height: $euiSwitchHeight;
     font-size: $euiFontSizeS;
+    vertical-align: middle;
   }
 
   /**
